--- a/product.html
+++ b/product.html
@@ -16,9 +16,9 @@
         <div class="header-container"><a class="logo" href="/"><img src="/img/logo.png" alt=""></a>
           <nav class="menu">
             <ul class="menu__list">
-              <li class="menu__item"><a class="menu__link" href="/">Главная</a></li>
-              <li class="menu__item"><a class="menu__link" href="/about.html">О компании</a></li>
-              <li class="menu__item menu__item--active"><a class="menu__link" href="/product.html">Продукты</a></li>
+              <li class="menu__item"><a class="menu__link" href="./index.html">Главная</a></li>
+              <li class="menu__item"><a class="menu__link" href="./about.html">О компании</a></li>
+              <li class="menu__item menu__item--active"><a class="menu__link" href="./product.html">Продукты</a></li>
             </ul>
           </nav>
           <div class="contacts">
