поправил путь до картинок

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="header-container"><a class="logo" href="/"><img src="/img/logo.png" alt=""></a>
+        <div class="header-container"><a class="logo" href="./index.html"><img src="img/logo.png" alt=""></a>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item menu__item--active"><a class="menu__link" href="./index.html">Главная</a></li>
