--- a/product.html
+++ b/product.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="header-container"><a class="logo" href="/"><img src="/img/logo.png" alt=""></a>
+        <div class="header-container"><a class="logo" href="./index.html"><img src="img/logo.png" alt=""></a>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item"><a class="menu__link" href="./index.html">Главная</a></li>
@@ -134,17 +134,17 @@
             <div class="inner-products__info">
               <div class="inner-products__info-items">
                 <ul class="inner-products__list">
-                  <li class="inner-products__item"><img src="/img/watches/small-1.jpg" alt=""></li>
-                  <li class="inner-products__item"><img src="/img/watches/small-2.jpg" alt=""></li>
-                  <li class="inner-products__item"><img src="/img/watches/small-3.jpg" alt=""></li>
+                  <li class="inner-products__item"><img src="img/watches/small-1.jpg" alt=""></li>
+                  <li class="inner-products__item"><img src="img/watches/small-2.jpg" alt=""></li>
+                  <li class="inner-products__item"><img src="img/watches/small-3.jpg" alt=""></li>
                 </ul>
               </div>
-              <div class="inner-products__info-display"><img src="/img/watches/big-1.jpg" alt=""></div>
+              <div class="inner-products__info-display"><img src="img/watches/big-1.jpg" alt=""></div>
               <div class="inner-products__info-items">
                 <ul class="inner-products__list">
-                  <li class="inner-products__item"><img src="/img/watches/small-1.jpg" alt=""></li>
-                  <li class="inner-products__item"><img src="/img/watches/small-2.jpg" alt=""></li>
-                  <li class="inner-products__item"><img src="/img/watches/small-3.jpg" alt=""></li>
+                  <li class="inner-products__item"><img src="img/watches/small-1.jpg" alt=""></li>
+                  <li class="inner-products__item"><img src="img/watches/small-2.jpg" alt=""></li>
+                  <li class="inner-products__item"><img src="img/watches/small-3.jpg" alt=""></li>
                 </ul>
               </div>
             </div>
