--- a/about.html
+++ b/about.html
@@ -13,7 +13,7 @@
   <body>
     <div class="wrapper">
       <header class="header">
-        <div class="header-container"><a class="logo" href="/"><img src="/img/logo.png" alt=""></a>
+        <div class="header-container"><a class="logo" href="./index.html"><img src="img/logo.png" alt=""></a>
           <nav class="menu">
             <ul class="menu__list">
               <li class="menu__item"><a class="menu__link" href="./index.html">Главная</a></li>
@@ -44,7 +44,7 @@
       </header>
       <div class="container">
         <div class="welcome">
-          <div class="welcome-picture"><img class="welcome__picture-img" src="/img/about-pic.jpg" alt="">
+          <div class="welcome-picture"><img class="welcome__picture-img" src="img/about-pic.jpg" alt="">
             <div class="welcome-picture__text">О компании</div>
           </div>
           <div class="welcome-text">
